mini-elp/test_projects/parse_error/rebar.config
{checkouts_dir, ["."]}.
{plugins, [eqwalizer_rebar3]}.
{project_app_dirs, [
    "parse_error_a",
    "eqwalizer"
]}.

{erl_opts, [debug_info]}.
{deps, []}.
